# Bio-AutoResearch

./: .gitignore  .uvrc  LICENSE  QUICK_START.md  README.md  README_CN.md  pyproject.toml  train.py
genomic/: README.md
imaging/: README.md
molecular/: AGENT_START.md  MINIMAL_CHANGES.md  README.md  README_CN.md  prepare_mol.py  program.md  train.py
protein/: README.md
